[SR-12421] Diagnose missing 'nil' in failable init